2014-07-22  Filip Pizlo  <fpizlo@apple.com>

        Merge r169628 from ftlopt.

    2014-06-04  Matthew Mirman  <mmirman@apple.com>
    
            Added system for inlining native functions via the FTL.
            https://bugs.webkit.org/show_bug.cgi?id=131515
    
            Reviewed by Filip Pizlo.
    
            Also fixed the build to not compress the bitcode and to 
            include all of the relevant runtime. With GCC_GENERATE_DEBUGGING_SYMBOLS = NO, 
            the produced bitcode files are a 100th the size they were before.  
            Now we can include all of the relevant runtime files with only a 3mb overhead. 
            This is the same overhead as for two compressed files before, 
            but done more efficiently (on both ends) and with less code.
            
            Deciding whether to inline native functions is left up to LLVM. 
            The entire module containing the function is linked into the current 
            compiled JS so that inlining the native functions shouldn't make them smaller.
            
            Rather than loading Runtime.symtbl at runtime FTLState.cpp now generates a file 
            InlineRuntimeSymbolTable.h which statically builds the symbol table hash table.  
            
            * JavaScriptCore.xcodeproj/project.pbxproj: Added back runtime files to compile.
            * build-symbol-table-index.py: Changed bitcode suffix. 
            Added inclusion of only tested symbols.  
            Added output to InlineRuntimeSymbolTable.h. 
            * build-symbol-table-index.sh: Changed bitcode suffix.
            * copy-llvm-ir-to-derived-sources.sh: Removed gzip compression.
            * tested-symbols.symlst: Added.
            * dfg/DFGByteCodeParser.cpp:
            (JSC::DFG::ByteCodeParser::handleCall):  
            Now sets the knownFunction of the call node if such a function exists 
            and emits a check that during runtime the callee is in fact known.